--- a/cfg.yaml
+++ b/cfg.yaml
@@ -1,3 +1,6 @@
-stashrepotpl: "http://foo:asdf@localhost:7990/scm/phpv/%s.git"
-stashapiurl: "http://foo:asdf@localhost:7990"
-stashproj: "PHPV"
+stash:
+  repo_tpl: "ssh://git@localhost:7999/t6/%s.git"
+  api_url: "http://foo:asdf@localhost:7990"
+  proj_key: "T6"
+satis:
+  api_url: "http://localhost:8080"
