--- a/cfg.yaml
+++ b/cfg.yaml
@@ -1,6 +1,7 @@
 stash:
-  repo_tpl: "ssh://git@localhost:7999/test/%s.git"
-  api_url: "http://foo:asdf@localhost:7990"
-  proj_key: "TEST"
+  repo_tpl: ssh://git@localhost:7999/test/%s.git
+  api_url: http://localhost:7990
+  auth: Zm9vOmFzZGY=
+  proj_key: TEST
 satis:
-  api_url: "http://localhost:8080"
+  api_url: http://localhost:8080
